# metahound

./: .gitignore  README.md  SECURITY.md  metadog.yaml  metahound.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
metadog/: analyze.py  cli.py  cli_functions.py  db_utils.py  file_utils.py  setup.py
metadog/backend_handlers/: __init__.py
metadog/connection_handlers/: README.md  az_connection.py  sftp_connection.py
metadog/db_scanners/: __init__.py  bigquery_scanner.py  mssql_scanner.py  oracle_scanner.py
metadog/file_handlers/: csv_handler.py  jsonl_handler.py  parquet_handler.py
metadog/outlierdetection/: __init__.py
metahound/: analyze.py  cadence.py  cli.py  cli_functions.py  diff.py  fileset_inference.py  filesets.py  freshness.py  json_schema.py  llm.py  llm_discovery.py  openapi.py  setup.py
metahound/backend_handlers/: __init__.py
metahound/connection_handlers/: s3_connection.py  sftp_connection.py
metahound/db_scanners/: __init__.py  bigquery_scanner.py  mssql_scanner.py  oracle_scanner.py  snowflake_scanner.py
metahound/file_handlers/: csv_handler.py  encoding.py  excel_handler.py  json_handler.py  jsonl_handler.py  parquet_handler.py
metahound/outlierdetection/: __init__.py
metahound/template/: metahound.template
server/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py
server/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py
server/app/routers/: anomalies.py  auth.py  dashboard.py  ingest.py  scans.py  sources.py  tokens.py
server/app/services/: alert_service.py  anomaly_service.py  ingest_service.py
server/app/static/css/: tailwind.css
server/app/static/js/: .gitkeep
server/app/tasks/: scheduler.py
server/app/templates/: anomalies.html  base.html  home.html  scans.html  source_detail.html  sources.html  tokens.html
server/app/templates/partials/: anomaly_row.html
tests/: conftest.py  test_backend.py  test_cadence.py  test_cli_functions.py  test_diff.py  test_file_formats.py  test_file_metrics.py  test_fileset_inference.py  test_filesets.py  test_llm_discovery.py  test_openapi.py  test_outliers.py  test_polite_stats.py  test_probe.py  test_push.py  test_security.py
tests/integration/: docker-compose.yml  run.sh  seed.sql
tests/integration/sftp_files/: orders_2026-07-01.csv
