[tool.poetry]
name = "metadog"
version = "2.0.1"
description = ""
authors = ["Henning <henning.holgersen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fsspec = ">2023.6"
sqlalchemy = "<2.0"
paramiko = ">3.2"
smart-open = ">6.3"
pyyaml = ">6.0"
python-dotenv = ">1.0"
jinja2 = ">3.1"
click = "~8.1.3"
pandas = ">=1.5"
pyarrow = ">=10.0"
prophet = "~1.1.4"
snowflake-sqlalchemy = "~1.5.0"
tabulate = "~0.9.0"
psycopg2-binary = ">2.9.8"
numpy = "<2.0"
requests = ">=2.31"

[tool.poetry.extras]
snowflake = ["snowflake-sqlalchemy"]
azure = ["azure-identity", "azure-storage-blob"]
s3 = ["s3fs"]
postgres = ["psycopg2-binary"]
bigquery = ["sqlalchemy-bigquery"]
oracle = ["python-oracledb"]
mssql = ["pymssql"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
metadog = 'metadog.cli:metadog'