[tool.poetry]
name = "metadog-server"
version = "0.1.0"
description = "Metadog SaaS server"
authors = ["Henning <henning.holgersen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.111"
uvicorn = {extras = ["standard"], version = ">=0.29"}
sqlalchemy = ">=2.0"
alembic = ">=1.13"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
python-jose = {extras = ["cryptography"], version = ">=3.3"}
httpx = ">=0.27"
jinja2 = ">=3.1"
python-multipart = ">=0.0.9"
APScheduler = ">=3.10"
aiosmtplib = ">=3.0"
slack-sdk = ">=3.27"
psycopg2-binary = ">=2.9"
itsdangerous = ">=2.2"
starlette = ">=0.37"
numpy = ">=1.26"
pandas = ">=2.0"
bcrypt = ">=4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
